k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  labels:
    app: todo
spec:
  selector:
    matchLabels:
      app: todo
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: "teknathdev/public:179a5ef603b636dbd15815dd9467714c2444db1f"
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 8080
              name: todo
