k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  selector:
    app: todo
  type: ClusterIP
  ports:
  - name: todo
    protocol: TCP
    port: 8080
    targetPort: 8080
