k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - todo.selise.tech
      secretName: todo.selise.tech
  rules:
    - host: todo.selise.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo
                port:
                  number: 8080
